--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,8 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --animate-fade-from-top: fade-from-top 0.5s ease-out;
+  --animate-slide-from-top: slide-from-top 0.5s ease-out forwards;
+  --animate-sidebar-from-left: sidebar-from-left 0.5s ease-out;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -51,8 +53,6 @@
     }
   }
 
-  --animate-slide-from-top: slide-from-top 0.5s ease-out forwards;
-
   @keyframes slide-from-top {
     0% {
       transform: translateY(-100%);
@@ -60,6 +60,17 @@
     }
     100% {
       transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes sidebar-from-left {
+    0% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
       opacity: 1;
     }
   }
